Modify circle ci job to push coverage to codecov

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,9 @@ jobs:
       # persist code coverage report
       - store_artifacts:
           path: coverage
+      - run:
+          name: Push coverage to codecov
+          command: npm run push-coverage
 
 
 workflows:
