--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "lint:md": "npm run lint-md -- --check",
         "pre-push": "npm-run-all lint test",
         "prepublish": "npm run pre-push; npm run build",
-        "release": "npm-run-all build np",
+        "prerelease": "npm run build",
+        "release": "np",
         "push-coverage": "codecov",
         "prepare": "husky install"
     },
