Add recommended eleventy keyword

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "keywords": [
         "eleventy",
         "shortcode",
+        "eleventy-plugin",
         "fortawesome",
         "fontawesome",
         "svg",
