--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
         "lint": "npm-run-all --parallel lint:*",
         "lint-fix": "npm-run-all --parallel fix:*",
         "lint:js": "eslint 'src/**/*.js'",
-        "fix:js": "npm run lint:js -- --fix",
+        "fix:js": "pnpm run lint:js -- --fix",
         "lint-md": "prettier  \"**/*.md\"",
-        "fix:md": "npm run lint-md -- --write",
-        "lint:md": "npm run lint-md -- --check",
+        "fix:md": "pnpm run lint-md -- --write",
+        "lint:md": "pnpm run lint-md -- --check",
         "pre-push": "npm-run-all lint test",
-        "prepublish": "npm run pre-push; npm run build",
-        "prerelease": "npm run build",
+        "prepublish": "pnpm run pre-push; pnpm run build",
+        "prerelease": "pnpm run build",
         "release": "np",
         "push-coverage": "codecov",
         "prepare": "husky install"
