Update npm scripts

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "lint": "npm-run-all --parallel lint:*",
         "lint-fix": "npm-run-all --parallel fix:*",
         "lint:js": "eslint 'src/**/*.js'",
-        "fix:js": "pnpm run lint:js -- --fix",
+        "fix:js": "pnpm run lint:js --fix",
         "lint-md": "prettier  \"**/*.md\"",
-        "fix:md": "pnpm run lint-md -- --write",
-        "lint:md": "pnpm run lint-md -- --check",
+        "fix:md": "pnpm run lint-md --write",
+        "lint:md": "pnpm run lint-md --check",
         "pre-push": "npm-run-all lint test",
         "prepublish": "pnpm run pre-push; pnpm run build",
         "prerelease": "pnpm run build",
