--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 
 
 jobs:
-  build-and-test:  
+  build-and-test:
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
     docker:
       - image: cimg/node:15.1
@@ -14,19 +14,38 @@ jobs:
     steps:
       # Checkout the code as the first step.
       - checkout
+      - restore_cache:
+          name: Restore pnpm Package Cache
+          keys:
+            - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+      - run:
+          name: Install pnpm package manager
+          command: |
+            corepack enable --install-directory ~/bin
+            corepack prepare pnpm@latest-9 --activate
+            pnpm config set store-dir .pnpm-store
+      - run:
+          name: Install Dependencies
+          command: |
+            pnpm install
+      - save_cache:
+          name: Save pnpm Package Cache
+          key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+          paths:
+            - .pnpm-store
       - node/install-packages
       - run:
           name: Run lint
-          command: npm run lint
+          command: pnpm run lint
       - run:
           name: Run tests
-          command: npm test
+          command: pnpm test
       # persist code coverage report
       - store_artifacts:
           path: coverage
       - run:
           name: Push coverage to codecov
-          command: npm run push-coverage
+          command: pnpm run push-coverage
 
 
 workflows:
@@ -34,6 +53,6 @@ workflows:
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
-  main: 
+  main:
     jobs:
       - build-and-test
