--- a/package.json
+++ b/package.json
@@ -66,5 +66,6 @@
     "dependencies": {
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
         "@vidhill/fortawesome-11ty-shortcode-helper": "^1.1.0"
-    }
+    },
+    "packageManager": "pnpm@9.11.0"
 }
