--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
         "@vidhill/fortawesome-11ty-shortcode-helper": "^1.1.0"
     },
+    "engines": {
+        "node": ">=18.16.1"
+    },
     "packageManager": "pnpm@9.11.0"
 }
