--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
     docker:
       - image: cimg/node:18.16
 
+    environment:
+      HUSKY: 0
     steps:
       # Checkout the code as the first step.
       - checkout
