--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "devDependencies": {
         "@babel/cli": "^7.12.1",
         "@babel/core": "^7.14.3",
+        "@types/node": "^22.5.5",
+        "@vitest/coverage-v8": "^2.1.1",
         "babel-preset-latest-node": "^5.5.1",
         "codecov": "^3.8.2",
         "eslint": "^7.28.0",
@@ -60,6 +62,7 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^2.3.1",
         "rimraf": "^3.0.2",
+        "vitest": "^2.1.1",
         "watch": "^0.13.0"
     },
     "dependencies": {
