--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "eslint-plugin-prettier": "^3.4.0",
         "husky": "^6.0.0",
         "jest-tobetype": "^1.2.3",
+        "jsdom": "^25.0.0",
         "np": "^7.5.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.3.1",
