Lint jest config

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "dev": "watch 'npm run build' src",
         "lint": "npm-run-all --parallel lint:*",
         "lint-fix": "npm-run-all --parallel fix:*",
-        "lint:js": "eslint 'src/**/*.js'",
+        "lint:js": "eslint 'src/**/*.js' 'jest-config/**/*.js'",
         "fix:js": "pnpm run lint:js --fix",
         "lint-md": "prettier  \"**/*.md\"",
         "fix:md": "pnpm run lint-md --write",
