Replace jest with vitest

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "Eleventy shortcode to embedded @fortawesome/free-regular-svg-icons as inline svgs",
     "main": "build/index.js",
     "scripts": {
-        "test": "jest",
-        "test:watch": "jest --watch",
+        "test": "vitest run",
+        "test:watch": "vitest",
         "prebuild": "rimraf build/",
         "build": "babel src -d build",
         "dev": "watch 'npm run build' src",
