--- a/package.json
+++ b/package.json
@@ -49,19 +49,20 @@
         "@vitest/coverage-v8": "^2.1.1",
         "babel-preset-latest-node": "^5.5.1",
         "codecov": "^3.8.2",
-        "eslint": "^7.28.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-config-vidhill": "^2.0.1",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-config-vidhill": "^4.0.0",
         "eslint-plugin-eslint-comments": "^3.2.0",
-        "eslint-plugin-import": "^2.23.4",
-        "eslint-plugin-jest": "^24.3.6",
-        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jest": "^28.8.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-unicorn": "^55.0.0",
         "husky": "^6.0.0",
         "jest-tobetype": "^1.2.3",
         "jsdom": "^25.0.0",
         "np": "^7.5.0",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.3.1",
+        "prettier": "^3.3.3",
         "rimraf": "^3.0.2",
         "vitest": "^2.1.1",
         "watch": "^0.13.0"
